# klock-core

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
docs/: README.md  agent-support.md  api-reference.md  architecture.md  benchmarks.md  docker.md  examples.md  getting-started.md  protocol-spec.md  publishing.md  releasing.md  sdk-javascript.md  sdk-python.md
docs-site/: docusaurus.config.js  package-lock.json  sidebars.js
docs-site/docs/: api-reference.md  architecture.md  benchmarks.md  getting-started.md
docs-site/docs/deployment/: docker.md
docs-site/docs/sdk/: javascript.md  python.md
docs-site/src/pages/: index.js
examples/openrouter_langchain/: README.md  account_2.json  compare_algorithms.py  data_logs.json  data_users.json  database.json  demo.py  demo_scale.py  requirements.txt
examples/oss_v1/: README.md  common.py  langchain_base_tool_demo.py  wait_die_trace.py  with_klock.py  without_klock.py
examples/oss_v1/workspace/src/: auth.js
examples/tiny_repro/: README.md  klock_fixed.py  race_condition.py  shared_state.json
integrations/klock-langchain/: README.md  klock_demo.ipynb  pyproject.toml  real_agents_demo.py
integrations/klock-langchain/mock_express_api/: auth.js
integrations/klock-langchain/src/klock_langchain/: __init__.py  tool.py
integrations/klock-langchain/tests/: test_tool.py
klock-cli/: Cargo.toml
klock-cli/src/: handlers.rs  main.rs  server.rs
klock-core/: Cargo.toml  README.md
klock-core/benches/: conflict_bench.rs  throughput_bench.rs
klock-core/src/: client.rs  conflict.rs  conflict_test.rs  infrastructure.rs  infrastructure_in_memory.rs  infrastructure_sqlite.rs  infrastructure_test.rs  lib.rs  scheduler.rs  scheduler_test.rs  state.rs  state_test.rs
klock-core/src/types/: lease.rs  mod.rs  primitives.rs
klock-js/: Cargo.toml  index.d.ts  index.js  package.json
klock-js/__test__/: index.test.mjs
klock-js/src/: lib.rs
klock-py/: Cargo.toml  LICENSE  README.md  klock.pyi  pyproject.toml
klock-py/src/: lib.rs
scripts/: run_oss_v1_demo.sh  verify_oss_v1.sh
