[package]
name = "klock-cli"
version = "0.1.0"
edition = "2021"
description = "CLI and HTTP server for the Klock coordination protocol"

[[bin]]
name = "klock"
path = "src/main.rs"

[dependencies]
klock-core = { path = "../klock-core" }
clap = { version = "4", features = ["derive", "env"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5", features = ["limit"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["sqlite"]
sqlite = ["klock-core/sqlite"]
