[package]
name = "klock-js"
version = "0.1.1"
edition = "2021"
description = "Node.js bindings for the Klock coordination kernel"
license = "MIT"
repository = "https://github.com/waythor-lab/klock"
homepage = "https://klockcore.com"

[lib]
crate-type = ["cdylib"]

[dependencies]
klock-core = { path = "../klock-core" }
napi = { version = "2", features = ["default"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"
