[package]
name = "klock-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "klock"
crate-type = ["cdylib"]

[dependencies]
klock-core = { path = "../klock-core" }
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py38"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
