[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "klock"
version = "0.1.0"
description = "Native Rust-powered coordination kernel for multi-agent systems"
readme = "README.md"
authors = [
    {name = "Mouad Nossair", email = "mouad@waythor.com"}
    {name = "Walid Amar", email = "walid@waythor.com"}

]
license = {text = "MIT"}
requires-python = ">=3.8"
urls = {repository = "https://github.com/waythor-lab/klock-core"}
keywords = ["klock", "coordination", "agents", "concurrency", "rust"]

[tool.maturin]
features = ["pyo3/extension-module"]
