[project]
name = "klock-langchain"
version = "0.1.0"
description = "LangChain integration for Klock"
readme = "README.md"
authors = [
    {name = "Mouad Nossair", email = "mouad@waythor.com"}
]
dependencies = [
    "langchain-core>=0.1.0",
    "klock"
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/klock_langchain"]
