[project]
name = "klock-langchain"
version = "0.1.2"
description = "LangChain integration for Klock"
readme = "README.md"
authors = [
    {name = "Mouad Nossair", email = "mouad@waythor.com"}
]
license = {text = "MIT"}
keywords = ["klock", "langchain", "agents", "concurrency"]
urls = {repository = "https://github.com/waythor-lab/klock", homepage = "https://klockcore.com"}
dependencies = [
    "langchain-core>=0.1.0",
    "klock>=0.1.2"
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/klock_langchain"]
